--- a/public/index.html
+++ b/public/index.html
@@ -733,7 +733,7 @@
             localStorage.setItem('isLoggedIn', 'true');
             renderEditor();
         } else {
-            errorDiv.textContent = 'Invalid credentials. Username: admin, Password: admin';
+            errorDiv.textContent = 'Invalid credentials.';
             errorDiv.classList.add('visible');
         }
     }
