--- a/public/index.html
+++ b/public/index.html
@@ -726,7 +726,7 @@
         const password = document.getElementById('password').value;
         const errorDiv = document.getElementById('loginError');
 
-        if (username === 'admin' && password === 'admin') {
+        if (username === 'maldito' && password === 'maldito') {
             errorDiv.classList.remove('visible');
             document.getElementById('loginSection').classList.add('hidden');
             document.getElementById('editorPanel').classList.add('visible');
